--- a/SkiAppClient/package.json
+++ b/SkiAppClient/package.json
@@ -16,8 +16,11 @@
 		"@fontsource/roboto": "^5.1.0",
 		"@mui/icons-material": "^6.1.9",
 		"@mui/material": "^6.1.9",
+		"axios": "^1.7.9",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.0.2",
+		"react-toastify": "^10.0.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
